break it up even more

--- a/2.6/Dockerfile
+++ b/2.6/Dockerfile
@@ -4,7 +4,6 @@ LABEL maintainer "https://github.com/blacktop"
 
 ENV ZEEK_VERSION 2.6
 
-COPY patches /tmp
 RUN apk add --no-cache zlib openssl libstdc++ libpcap geoip libgcc tini
 RUN apk add --no-cache -t .build-deps \
   linux-headers \
@@ -23,7 +22,10 @@ RUN apk add --no-cache -t .build-deps \
   flex \
   git \
   g++ \
-  fts \
+  fts
+
+COPY patches /tmp
+RUN \
   && cd /tmp \
   && git clone --recursive --branch v$ZEEK_VERSION https://github.com/zeek/zeek.git \
   && echo "===> Applying patches..." \
@@ -31,8 +33,9 @@ RUN apk add --no-cache -t .build-deps \
   && patch -p1 < /tmp/bro-musl.patch \
   && cp /tmp/FindFTS.cmake cmake \
   && cd /tmp/zeek/aux/binpac \
-  && patch -p1 < /tmp/binpac-musl.patch \
-  && echo "===> Compiling zeek..." \
+  && patch -p1 < /tmp/binpac-musl.patch
+
+RUN echo "===> Compiling zeek..." \
   && cd /tmp/zeek \
   && CC=clang ./configure --prefix=/usr/local \
   --disable-broker-tests \
@@ -40,24 +43,25 @@ RUN apk add --no-cache -t .build-deps \
   --disable-auxtools \
   && make \
   && make install
-# && echo "===> Compiling af_packet plugin..." \
-# && cd /tmp/zeek/aux/plugins \
-# && git clone https://github.com/J-Gras/bro-af_packet-plugin \
-# && cd /tmp/zeek/aux/plugins/bro-af_packet-plugin \
-# && make distclean \
-# && CC=clang ./configure --with-kernel=/usr \
-# && make \
-# && make install \
-# && echo "===> Shrinking image..." \
-# && strip -s /usr/local/bin/zeek \
-# && rm -rf /tmp/* \
-# && apk del --purge .build-deps
 
+RUN echo "===> Compiling af_packet plugin..." \
+  && cd /tmp/zeek/aux/plugins \
+  && git clone https://github.com/J-Gras/bro-af_packet-plugin \
+  && cd /tmp/zeek/aux/plugins/bro-af_packet-plugin \
+  && make distclean \
+  && CC=clang ./configure --with-kernel=/usr \
+  && make \
+  && make install
+
+RUN echo "===> Shrinking image..." \
+  && strip -s /usr/local/bin/bro
+
+####################################################################################################
 FROM alpine:latest
 
 LABEL maintainer "https://github.com/blacktop"
 
-RUN apk --no-cache add ca-certificates
+RUN apk --no-cache add ca-certificates geoip
 
 COPY --from=builder /usr/local/bin/bro /usr/local/bin/bro
 COPY --from=builder /usr/local/bin/bro-config /usr/local/bin/bro-config
