--- a/2.6/Dockerfile
+++ b/2.6/Dockerfile
@@ -35,7 +35,7 @@ RUN echo "===> Compiling zeek..." \
   --disable-broker-tests \
   --disable-broctl \
   --disable-auxtools \
-  && make \
+  && make -j `nproc` \
   && make install
 
 # RUN echo "===> Compiling af_packet plugin..." \
