--- a/elastic/config/filebeat.yml
+++ b/elastic/config/filebeat.yml
@@ -3,10 +3,10 @@ filebeat.config:
     path: ${path.config}/modules.d/*.yml
     reload.enabled: false
 
-filebeat.autodiscover:
-  providers:
-    - type: docker
-      hints.enabled: true
+# filebeat.autodiscover:
+#   providers:
+#     - type: docker
+#       hints.enabled: true
 
 filebeat.modules:
 - module: zeek
