--- a/elastic/Dockerfile
+++ b/elastic/Dockerfile
@@ -6,7 +6,6 @@ ENV ZEEK_VERSION 2.6.1
 
 RUN apk add --no-cache zlib openssl libstdc++ libpcap geoip libgcc tini
 RUN apk add --no-cache -t .build-deps \
-  libmaxminddb-dev \
   linux-headers \
   openssl-dev \
   libpcap-dev \
@@ -51,6 +50,16 @@ RUN echo "===> Installing corelight/json-streaming-logs package..." \
   && find json-streaming-logs -name "*.bro" -exec sh -c 'mv "$1" "${1%.bro}.zeek"' _ {} \; \
   && mv json-streaming-logs/scripts /usr/local/bro/share/bro/site/json-streaming-logs
 
+# RUN echo "===> Installing corelight/bro-maxminddb package..." \
+#   && cd /tmp/zeek/aux/ \
+#   && git clone https://github.com/corelight/bro-maxminddb.git \
+#   && apk add --no-cache libmaxminddb-dev \
+#   && cd /tmp/zeek/aux/bro-maxminddb \
+#   && find . -name "*.bro" -exec sh -c 'mv "$1" "${1%.bro}.zeek"' _ {} \; \
+#   && CC=clang ./configure --bro-dist=/tmp/zeek \
+#   && make -j `nproc` \
+#   && make install
+
 RUN echo "===> Shrinking image..." \
   && strip -s /usr/local/bro/bin/bro
 ####################################################################################################
@@ -67,18 +76,21 @@ RUN \
 
 COPY config /usr/share/filebeat
 ####################################################################################################
-FROM alpine:3.8
+FROM alpine:3.8 as geoip
 
+ENV MAXMIND_CITY https://geolite.maxmind.com/download/geoip/database/GeoLite2-City.tar.gz
+ENV MAXMIND_CNTRY https://geolite.maxmind.com/download/geoip/database/GeoLite2-Country.tar.gz
+ENV GITHUB_CITY https://github.com/blacktop/docker-zeek/raw/master/maxmind/GeoLite2-City.tar.gz
+ENV GITHUB_CNTRY https://github.com/blacktop/docker-zeek/raw/master/maxmind/GeoLite2-Country.tar.gz
 # Install the GeoIPLite Database
-RUN apk add --no-cache curl \
-  && /tmp \
+RUN cd /tmp \
   && mkdir -p /usr/share/GeoIP/ \
-  && wget https://geolite.maxmind.com/download/geoip/database/GeoLite2-City.tar.gz \
+  && wget ${GITHUB_CITY} \
   && tar xzvf GeoLite2-City.tar.gz \
-  && mv GeoLite2-City/GeoLite2-City.mmdb /usr/share/GeoIP/ \
-  && wget https://geolite.maxmind.com/download/geoip/database/GeoLite2-Country.tar.gz \
+  && mv GeoLite2-City*/GeoLite2-City.mmdb /usr/share/GeoIP/ \
+  && wget ${GITHUB_CNTRY} \
   && tar xzvf GeoLite2-Country.tar.gz \
-  && mv GeoLite2-Country/GeoLite2-Country.mmdb /usr/share/GeoIP/
+  && mv GeoLite2-Country*/GeoLite2-Country.mmdb /usr/share/GeoIP/
 ####################################################################################################
 FROM alpine:3.8
 
