fix elastic test

--- a/docker-compose.elastic.yml
+++ b/docker-compose.elastic.yml
@@ -25,14 +25,11 @@ services:
       - ./pcap:/pcap
     command: -e
 
-  bro:
+  zeek:
     depends_on:
-      - kibana
+      - filebeat
     build: ./elastic
     image: blacktop/zeek:elastic
-    links:
-      - kibana
-      - elasticsearch
     volumes:
       - ./pcap:/pcap
     command: -F -r smallFlows.pcap local file-extraction/plugins/extract-all-files.bro "Site::local_nets += { 192.168.5.0/24, 10.0.2.0/24 }"
