--- a/kafka/Dockerfile
+++ b/kafka/Dockerfile
@@ -4,13 +4,13 @@ LABEL maintainer "https://github.com/blacktop"
 
 ENV ZEEK_VERSION 2.6.1
 
-RUN apk add --no-cache zlib openssl libstdc++ libpcap geoip libgcc tini
+RUN apk add --no-cache zlib openssl libstdc++ libpcap libgcc
 RUN apk add --no-cache -t .build-deps \
+  libmaxminddb-dev \
   linux-headers \
   openssl-dev \
   libpcap-dev \
   python-dev \
-  geoip-dev \
   zlib-dev \
   binutils \
   fts-dev \
@@ -38,6 +38,16 @@ RUN echo "===> Compiling zeek..." \
   && make -j `nproc` \
   && make install
 
+RUN echo "===> Compiling af_packet plugin..." \
+  && cd /tmp/zeek/aux/ \
+  && git clone https://github.com/J-Gras/bro-af_packet-plugin.git \
+  && cd /tmp/zeek/aux/bro-af_packet-plugin \
+  && find . -name "*.bro" -exec sh -c 'mv "$1" "${1%.bro}.zeek"' _ {} \; \
+  && CC=clang ./configure --with-kernel=/usr \
+  && make -j `nproc` \
+  && make install \
+  && /usr/local/bro/bin/bro -NN Bro::AF_Packet
+
 RUN echo "===> Installing apache/metron-bro-plugin-kafka package..." \
   && cd /tmp/zeek/aux/ \
   && git clone https://github.com/apache/metron-bro-plugin-kafka.git \
@@ -58,7 +68,7 @@ FROM alpine:3.8
 
 LABEL maintainer "https://github.com/blacktop"
 
-RUN apk --no-cache add ca-certificates zlib openssl libstdc++ libpcap geoip libgcc fts librdkafka
+RUN apk --no-cache add ca-certificates zlib openssl libstdc++ libpcap libmaxminddb libgcc fts librdkafka
 
 COPY --from=builder /usr/local/bro /usr/local/bro
 COPY local.bro /usr/local/bro/share/bro/site/local.zeek
