maybe shrink em

--- a/2.6/Dockerfile
+++ b/2.6/Dockerfile
@@ -17,6 +17,7 @@ RUN apk add --no-cache -t .build-deps \
   cmake \
   clang \
   bison \
+  swig \
   perl \
   make \
   flex \
@@ -32,11 +33,12 @@ RUN echo "===> Cloning zeek..." \
 RUN echo "===> Compiling zeek..." \
   && cd /tmp/zeek \
   && CC=clang ./configure --prefix=/usr/local/bro \
+  --build-type=MinSizeRel \
   --disable-broker-tests \
   --disable-broctl \
   --disable-auxtools \
   --disable-python \
-  && make -j `nproc` \
+  && make -j 2 \
   && make install
 
 RUN echo "===> Compiling af_packet plugin..." \
@@ -45,7 +47,7 @@ RUN echo "===> Compiling af_packet plugin..." \
   && cd /tmp/zeek/aux/bro-af_packet-plugin \
   && find . -name "*.bro" -exec sh -c 'mv "$1" "${1%.bro}.zeek"' _ {} \; \
   && CC=clang ./configure --with-kernel=/usr --bro-dist=/tmp/zeek \
-  && make -j `nproc` \
+  && make -j 2 \
   && make install \
   && /usr/local/bro/bin/bro -NN Bro::AF_Packet
 
