--- a/docker-compose.elastic.yml
+++ b/docker-compose.elastic.yml
@@ -1,7 +1,9 @@
 version: "3"
 services:
   elasticsearch:
-    image: blacktop/elasticsearch:7.4.0
+    image: blacktop/elasticsearch:x-pack-7.4.0
+    environment:
+      - discovery.type=single-node
     ports:
       - "9200:9200"
     networks:
@@ -10,7 +12,9 @@ services:
   kibana:
     depends_on:
       - elasticsearch
-    image: blacktop/kibana:7.4.0
+    image: blacktop/kibana:x-pack-7.4.0
+    environment:
+      - xpack.reporting.enabled=false
     ports:
       - "5601:5601"
     links:
