--- a/3.1/Dockerfile
+++ b/3.1/Dockerfile
@@ -44,9 +44,9 @@ RUN echo "===> Compiling zeek..." \
 
 RUN echo "===> Compiling af_packet plugin..." \
   && cd /tmp/zeek/aux/ \
-  && git clone https://github.com/J-Gras/bro-af_packet-plugin.git \
-  && cd /tmp/zeek/aux/bro-af_packet-plugin \
-  && CC=clang ./configure --with-kernel=/usr --bro-dist=/tmp/zeek \
+  && git clone https://github.com/J-Gras/zeek-af_packet-plugin.git \
+  && cd /tmp/zeek/aux/zeek-af_packet-plugin \
+  && CC=clang ./configure --with-kernel=/usr --zeek-dist=/tmp/zeek \
   && make -j 2 \
   && make install \
   && /usr/local/zeek/bin/zeek -NN Zeek::AF_Packet
